--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,12 @@
             </intent-filter>
         </activity>
 
+        <activity
+                android:name=".ResultActivity"
+                android:label="@string/app_name"
+                android:theme="@style/AppTheme">
+        </activity>
+
 
         <provider
                 android:name=".GenericFileProvider"
