--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+
         <activity
                 android:name=".MainActivity"
                 android:label="@string/app_name"
@@ -29,6 +30,11 @@
                 android:theme="@style/AppTheme">
         </activity>
 
+        <activity
+                android:name=".DestinationsManagementActivity"
+                android:label="@string/app_name"
+                android:theme="@style/AppTheme">
+        </activity>
 
         <provider
                 android:name=".GenericFileProvider"
