--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
             android:theme="@style/AppTheme">
 
         <activity
-                android:name=".MainActivity"
+                android:name=".activities.MainActivity"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -25,19 +25,19 @@
         </activity>
 
         <activity
-                android:name=".ResultActivity"
+                android:name=".activities.ResultActivity"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme">
         </activity>
 
         <activity
-                android:name=".DestinationsManagementActivity"
+                android:name=".activities.DestinationsManagementActivity"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme">
         </activity>
 
         <provider
-                android:name=".GenericFileProvider"
+                android:name=".activities.GenericFileProvider"
                 android:authorities="${applicationId}.fileprovider"
                 android:exported="false"
                 android:grantUriPermissions="true">
