--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,16 @@ android {
     }
     buildTypes {
         release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField 'String', 'INSTAGRAM_CLIENT_ID', '"262535959046361"'
+            buildConfigField 'String', 'INSTAGRAM_CLIENT_SECRET', '"48299a2d01001118d2a1f13717f3c3e3"'
+        }
+        debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField 'String', 'INSTAGRAM_CLIENT_ID', '"262535959046361"'
+            buildConfigField 'String', 'INSTAGRAM_CLIENT_SECRET', '"48299a2d01001118d2a1f13717f3c3e3"'
         }
     }
     buildFeatures{
@@ -44,6 +52,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'org.jsoup:jsoup:1.10.2'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.2'
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
