--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,12 @@
         </activity>
 
         <activity
+                android:name=".activities.LoginActivity"
+                android:label="@string/app_name"
+                android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
+        <activity
                 android:name=".activities.ResultActivity"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme">
